<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SuperProfs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_download">Download</string>
    <string name="review_text">The educational guidelines are similar to a treaty that has been adopted by copyright owners and academics. Under this arrangement, copyright owners will permit uses that are outlined in the guidelines. In other fair use situations, the only way to prove that a use is permitted is to submit</string>
    <string name="course_students">COURSE STUDENTS</string>
    <string name="title_activity_professor">ProfessorActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>

    <!-- exoplayer data-->
    <string name="enable_background_audio">Play in background</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="text">Text</string>
    <string name="logging">Logging</string>
    <string name="logging_normal">Normal</string>
    <string name="logging_verbose">Verbose</string>
    <string name="retry">Retry</string>
    <string name="off">[off]</string>
    <string name="on">[on]</string>
    <string name="drm_error_not_supported">Protected content not supported on API levels below 18</string>
    <string name="drm_error_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="drm_error_unknown">An unknown DRM error occurred</string>
    <string name="failed">Playback failed</string>

<!-- player-->
    <string name="lockscreen_transport_play_description">Play</string>
    <string name="lockscreen_transport_pause_description">Pause</string>








    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
    <string name="title_activity_download">DownloadActivity</string>

</resources>
