<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <com.google.android.exoplayer.VideoSurfaceView
        android:id="@+id/surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

    <com.google.android.exoplayer.text.SubtitleView
        android:id="@+id/subtitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:visibility="invisible" />

    <View
        android:id="@+id/shutter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#88000000"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/player_state_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/debug_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:id="@+id/controls_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/video_controls"
                style="@style/DemoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showVideoPopup"
                android:text="@string/video"
                android:visibility="gone" />

            <Button
                android:id="@+id/audio_controls"
                style="@style/DemoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showAudioPopup"
                android:text="@string/audio"
                android:visibility="gone" />

            <Button
                android:id="@+id/text_controls"
                style="@style/DemoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showTextPopup"
                android:text="@string/text"
                android:visibility="gone" />

            <Button
                android:id="@+id/verbose_log_controls"
                style="@style/DemoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showVerboseLogPopup"
                android:text="@string/logging" />

            <Button
                android:id="@+id/retry_button"
                style="@style/DemoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
